RESOLVED FIXED20070
REGRESSION: Can't create windowless plug-in with Flash 9
https://bugs.webkit.org/show_bug.cgi?id=20070
Summary REGRESSION: Can't create windowless plug-in with Flash 9
Jon Honeycutt
Reported 2008-07-16 21:58:43 PDT
The page specifies a windowless plug-in for its banner, but Flash 9 requests a windowed plug-in. This makes the NewEgg menu unusable, as the Flash window draws over it. Patch coming.
Attachments
Fix (1.32 KB, patch)
2008-07-16 22:04 PDT, Jon Honeycutt
mrowe: review+
Jon Honeycutt
Comment 1 2008-07-16 22:04:34 PDT
Mark Rowe (bdash)
Comment 2 2008-07-16 23:08:43 PDT
Comment on attachment 22330 [details] Fix r=me
Jon Honeycutt
Comment 3 2008-07-16 23:18:27 PDT
Committed in r35212.
Note You need to log in before you can comment on or make changes to this bug.