2008-07-16  Jon Honeycutt  <jhoneycutt@apple.com>

REGRESSION: Can't create windowless plug-in with Flash 9
        https://bugs.webkit.org/show_bug.cgi?id=20070

        Reviewed by Mark Rowe.

        * plugins/win/PluginPackageWin.cpp:
        (WebCore::PluginPackage::determineQuirks): Reverse argument order;
        PlatformModuleVersion constructor takes leastSig, mostSig.




Canonical link: https://commits.webkit.org/27643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35212 268f45cc-cd09-0410-ab3c-d52691b4dbfc